# FastPIR

src/: CMakeLists.txt  bfvparams.h  client.cpp  fastpirparams.cpp  main.cpp  mclient.cpp  mclient.hpp  mfastpirparams.cpp  mfastpirparams.hpp  mserver.cpp  mserver.hpp  mtest.cpp  multi_query.cpp  server.cpp  server.hpp
src/tcp_query/: codec.h  tcp_query_client.cpp  tcp_query_server.cpp
